Added several SRV files, modified ros_get_coord to advertise some services

--- a/gazebo_pkg/CMakeLists.txt
+++ b/gazebo_pkg/CMakeLists.txt
@@ -42,6 +42,9 @@ add_service_files(
 	GetCoordFromClient.srv
 	GetTextParam.srv
 	SendStampedPose.srv
+	ObjectInspectionNumber.srv
+	ObjectInspectionBounding.srv
+	ObjectInspectionCenter.srv
 )
 
 generate_messages(   
