--- a/gazebo_pkg/package.xml
+++ b/gazebo_pkg/package.xml
@@ -53,6 +53,7 @@
   <build_depend>orocos_kdl</build_depend>
   <build_depend>gazebo_ros_pkgs</build_depend>
   <build_depend>eigen</build_depend>
+  <build_depend>pcl_conversions</build_depend>
  <!-- <build_depend>ogre_tools</build_depend>-->
 
   <run_depend>message_runtime</run_depend>
@@ -67,6 +68,7 @@
   <run_depend>orocos_kdl</run_depend>
   <run_depend>gazebo_ros_pkgs</run_depend>
   <run_depend>eigen</run_depend>
+  <run_depend>pcl_conversions</run_depend>
 <!--  <run_depend>ogre_tools</run_depend> -->
 
   <!-- The export tag contains other, unspecified, tags -->
