Nice results on POT STL - got classified with KNN as 1_SPHERE and 4_CYLINDER

--- a/gazebo_pkg/CMakeLists.txt
+++ b/gazebo_pkg/CMakeLists.txt
@@ -53,6 +53,7 @@ add_service_files(
 	ObjectCanSendNextCamPos.srv
 	ObjectInspectionStart.srv
 	ObjectInspectionClassifier.srv
+	ObjectInspectionClassifyClouds.srv
 	Classifier.srv
 )
 
